[project]
name = "prescient-walkjump"
description = "Walk-jump"
authors = [{name = "Prescient Design"}]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.scripts]
walkjump_train = "walkjump.cmdline.train:main"
walkjump_sample = "walkjump.cmdline.sample:main"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
readme = {file = "README.md"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
search_parent_directories = true
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.dmnd", "*.parquet", "*.csv.gz", "*.npz", "*.pkl.gz", "*.csv"]

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
# disallow_any_unimported = true
# check_untyped_defs = true
no_implicit_optional = true
# warn_return_any = true
# disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
warn_unreachable = true
plugins = ["numpy.typing.mypy_plugin"]


[[tool.mypy.overrides]]
module = [
    "Bio.*",
    "edlib.*",
    "matplotlib.*",
    "pandas.*",
    "pyarrow.*",
    "scipy.*",
    "seaborn",
    "sklearn.*",
    "tqdm.*",
    "upath.*",
    "transformers.*",
    "rdkit.*",
    "prescient.*",
    "smart_open.*",
    "anarci.*",
    "lightning.*",
    "torchvision.*",
    "boto3.*",
]

ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100