[project]
name = "prescient-walkjump"
description = "Walk-jump"
authors = [{name = "Prescient Design"}]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.scripts]
walkjump_train = "walkjump.cmdline:train"
walkjump_sample = "walkjump.cmdline:sample"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
readme = {file = "README.md"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
search_parent_directories = true
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.csv.gz"]

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
# disallow_any_unimported = true
# check_untyped_defs = true
no_implicit_optional = true
# warn_return_any = true
# disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
warn_unreachable = true
plugins = ["numpy.typing.mypy_plugin"]


[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "rdkit.*",
    "anarci.*",
    "lightning.*",
    "torchvision.*",
]

ignore_missing_imports = true

[tool.ruff]
line-length = 100
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
use_parentheses = true
force_grid_wrap = 0
include_trailing_comma = true
ensure_newline_before_comments = true
known_third_party=["wandb"]